--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,12 @@ dependencies:
   json_annotation: ^2.4.0
   flutter_swiper: ^1.1.6
   url_launcher: ^5.0.3
+#  状态管理
+  scoped_model: ^1.0.1
+#  缓存，类似于localStorage
+  shared_preferences: ^0.5.3+1
+  numberpicker: ^1.0.0
+  date_format: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
